Fixed slideshow banner page accessibility error

--- a/sample/slideshow-header-banner.html
+++ b/sample/slideshow-header-banner.html
@@ -86,11 +86,11 @@ Based on Twitter Bootstrap
 
             <p>An optional link with a caption can be added. The caption is contained inside the link in the <code>.slide-text</code> element.</p>
 
-            <h2>Source Code:</h2>
+            <h2><label for="sample-4">Source Code:</label></h2>
             <textarea id="sample-4" class="form-control" rows="10" cols="80"><!--#include virtual="/ssi/header-slideshow-banner.html" --></textarea>
             <br />
 
-            <p><a href="page-templates.html"><button class="btn btn-secondary">Back to Page Templates</button></a></p>
+            <p><a href="page-templates.html" class="btn btn-secondary">Back to Page Templates</a></p>
         </main>
 
     </div>
