Fixed business profile page accessibility error

--- a/business-profile.html
+++ b/business-profile.html
@@ -107,7 +107,7 @@
                         <div class="quarter">
                             <!-- Embeded Youtube Video -->
                             <div class="video-player" data-sly-test="${!properties.lightbox}">
-                                <iframe title="DMV Youtube video" class="youtube-player" src="https://www.youtube.com/embed/V3Z9ugTj4-o" frameborder="0" allowfullscreen></iframe>
+                                <iframe title="DMV Youtube video" class="youtube-player border-0" src="https://www.youtube.com/embed/V3Z9ugTj4-o" allowfullscreen></iframe>
 
 
 
