--- a/ssi/head-css-js.html
+++ b/ssi/head-css-js.html
@@ -39,11 +39,13 @@ Select a color scheme:
 <![endif]-->
 
 <!-- Load jQuery from CDN with fallback to local copy -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js" type="text/javascript"></script>
+<script src="https://code.jquery.com/jquery-3.4.1.min.js"
+        integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+        crossorigin="anonymous"></script>
 <script>
     //Fall back to local copy if no jquery found
     if (typeof jQuery == 'undefined') {
-        document.write(unescape("%3Cscript src='/js/libs/jquery-3.2.1.min.js' type='text/javascript'%3E%3C/script%3E"));
+        document.write(unescape("%3Cscript src='/js/libs/jquery.js' type='text/javascript'%3E%3C/script%3E"));
     }
 </script>
 <!-- Load jQuery migrate from CDN with fallback to local copy -->
