- Fixed nav-media background image overlay issue in mobile sub navigation - Removed "+" symbols displayed in search box in serp.html when search term with spaces is used

--- a/serp.html
+++ b/serp.html
@@ -113,7 +113,7 @@
 
             return (results !== null) ? results[1] || 0 : false;
         }
-        var query = jQuery.urlParam('q');
+        var query = decodeURIComponent($.urlParam('q').replace(/\+/g," "));
         $('input[name=q]').val(query);
 
     </script>
