--- a/serp.html
+++ b/serp.html
@@ -111,7 +111,7 @@
 
             return (results !== null) ? results[1] || 0 : false;
         }
-        var query = jQuery.urlParam('q');
+        var query = decodeURIComponent($.urlParam('q').replace(/\+/g, " "));
         $('input[name=q]').val(query);
 
     </script>
