--- a/sample/icon-fonts.html
+++ b/sample/icon-fonts.html
@@ -243,6 +243,179 @@ Version 5.0.10
 
                 <!-- START ICOMOON DEMO -->
                 <div class="clearfix mhl ptl">
+
+                    <div class="glyph fs1">
+                        <div class="clearfix bshadow0 pbs">
+                            <span class="ca-gov-icon-biohazard">
+
+                            </span>
+                            <span class="mls"> ca-gov-icon-biohazard</span>
+                        </div>
+                        <p class="icon-value">e918</p>
+
+                    </div>
+                    <div class="glyph fs1">
+                        <div class="clearfix bshadow0 pbs">
+                            <span class="ca-gov-icon-malware">
+
+                            </span>
+                            <span class="mls"> ca-gov-icon-malware</span>
+                        </div>
+                        <p class="icon-value">e919</p>
+                    </div>
+                    <div class="glyph fs1">
+                        <div class="clearfix bshadow0 pbs">
+                            <span class="ca-gov-icon-radiation">
+
+                            </span>
+                            <span class="mls"> ca-gov-icon-radiation</span>
+                        </div>
+                        <p class="icon-value">e955</p>
+                    </div>
+                    <div class="glyph fs1">
+                        <div class="clearfix bshadow0 pbs">
+                            <span class="ca-gov-icon-chemical-hazard">
+
+                            </span>
+                            <span class="mls"> ca-gov-icon-chemical-hazard</span>
+                        </div>
+                        <p class="icon-value">e956</p>
+                    </div>
+                    <div class="glyph fs1">
+                        <div class="clearfix bshadow0 pbs">
+                            <span class="ca-gov-icon-danger">
+
+                            </span>
+                            <span class="mls"> ca-gov-icon-danger</span>
+                        </div>
+                        <p class="icon-value">e957</p>
+                    </div>
+                    <div class="glyph fs1">
+                        <div class="clearfix bshadow0 pbs">
+                            <span class="ca-gov-icon-do-not-sign">
+
+                            </span>
+                            <span class="mls"> ca-gov-icon-do-not-sign</span>
+                        </div>
+                        <p class="icon-value">e958</p>
+                    </div>
+                    <div class="glyph fs1">
+                        <div class="clearfix bshadow0 pbs">
+                            <span class="ca-gov-icon-quake-house">
+
+                            </span>
+                            <span class="mls"> ca-gov-icon-quake-house</span>
+                        </div>
+                        <p class="icon-value">e959</p>
+                    </div>
+                    <div class="glyph fs1">
+                        <div class="clearfix bshadow0 pbs">
+                            <span class="ca-gov-icon-electricity-hazard">
+
+                            </span>
+                            <span class="mls"> ca-gov-icon-electricity-hazard</span>
+                        </div>
+                        <p class="icon-value">e95c</p>
+                    </div>
+                    <div class="glyph fs1">
+                        <div class="clearfix bshadow0 pbs">
+                            <span class="ca-gov-icon-flood">
+
+                            </span>
+                            <span class="mls"> ca-gov-icon-flood</span>
+                        </div>
+                        <p class="icon-value">e95d</p>
+                    </div>
+                    <div class="glyph fs1">
+                        <div class="clearfix bshadow0 pbs">
+                            <span class="ca-gov-icon-hazard">
+
+                            </span>
+                            <span class="mls"> ca-gov-icon-hazard</span>
+                        </div>
+                        <p class="icon-value">e95e</p>
+                    </div>
+                    <div class="glyph fs1">
+                        <div class="clearfix bshadow0 pbs">
+                            <span class="ca-gov-icon-hurricane">
+
+                            </span>
+                            <span class="mls"> ca-gov-icon-hurricane</span>
+                        </div>
+                        <p class="icon-value">e95f</p>
+                    </div>
+                    <div class="glyph fs1">
+                        <div class="clearfix bshadow0 pbs">
+                            <span class="ca-gov-icon-sea-level-rise"></span>
+                            <span class="mls"> ca-gov-icon-sea-level-rise</span>
+                        </div>
+                        <p class="icon-value">e960</p>
+                    </div>
+                    <div class="glyph fs1">
+                        <div class="clearfix bshadow0 pbs">
+                            <span class="ca-gov-icon-severe-weather"></span>
+                            <span class="mls"> ca-gov-icon-severe-weather</span>
+                        </div>
+                        <p class="icon-value">e961</p>
+                    </div>
+                    <div class="glyph fs1">
+                        <div class="clearfix bshadow0 pbs">
+                            <span class="ca-gov-icon-stop-fire"></span>
+                            <span class="mls"> ca-gov-icon-stop-fire</span>
+                        </div>
+                        <p class="icon-value">e962</p>
+                    </div>
+                    <div class="glyph fs1">
+                        <div class="clearfix bshadow0 pbs">
+                            <span class="ca-gov-icon-stop-hand"></span>
+                            <span class="mls"> ca-gov-icon-stop-hand</span>
+                        </div>
+                        <p class="icon-value">e963</p>
+                    </div>
+                    <div class="glyph fs1">
+                        <div class="clearfix bshadow0 pbs">
+                            <span class="ca-gov-icon-tornado"></span>
+                            <span class="mls"> ca-gov-icon-tornado</span>
+                        </div>
+                        <p class="icon-value">e964</p>
+                    </div>
+                    <div class="glyph fs1">
+                        <div class="clearfix bshadow0 pbs">
+                            <span class="ca-gov-icon-tsunami"></span>
+                            <span class="mls"> ca-gov-icon-tsunami</span>
+                        </div>
+                        <p class="icon-value">e965</p>
+                    </div>
+                    <div class="glyph fs1">
+                        <div class="clearfix bshadow0 pbs">
+                            <span class="ca-gov-icon-volcano"></span>
+                            <span class="mls"> ca-gov-icon-volcano</span>
+                        </div>
+                        <p class="icon-value">e966</p>
+                    </div>
+                    <div class="glyph fs1">
+                        <div class="clearfix bshadow0 pbs">
+                            <span class="ca-gov-icon-tent"></span>
+                            <span class="mls"> ca-gov-icon-tent</span>
+                        </div>
+                        <p class="icon-value">e969</p>
+                    </div>
+                    <div class="glyph fs1">
+                        <div class="clearfix bshadow0 pbs">
+                            <span class="ca-gov-icon-campfire"></span>
+                            <span class="mls"> ca-gov-icon-campfire</span>
+                        </div>
+                        <p class="icon-value">e96a</p>
+                    </div>
+                    <div class="glyph fs1">
+                        <div class="clearfix bshadow0 pbs">
+                            <span class="ca-gov-icon-dam"></span>
+                            <span class="mls"> ca-gov-icon-dam</span>
+                        </div>
+                        <p class="icon-value">e96b</p>
+                    </div>
+
+
                     <div class="glyph fs1">
                         <div class="clearfix bshadow0 pbs">
                             <span class="ca-gov-icon-hours">
@@ -361,6 +534,28 @@ Version 5.0.10
                         </div>
                         <p class="icon-value">e91a</p>
                     </div>
+
+                    <div class="glyph fs1">
+                        <div class="clearfix bshadow0 pbs">
+                            <span class="ca-gov-icon-download-cloud">
+
+                            </span>
+                            <span class="mls"> ca-gov-icon-download-cloud</span>
+                        </div>
+                        <p class="icon-value">e96c</p>
+                    </div>
+
+                    <div class="glyph fs1">
+                        <div class="clearfix bshadow0 pbs">
+                            <span class="ca-gov-icon-upload-cloud">
+
+                            </span>
+                            <span class="mls"> ca-gov-icon-upload-cloud</span>
+                        </div>
+                        <p class="icon-value">e96d</p>
+                    </div>
+
+
                     <div class="glyph fs1">
                         <div class="clearfix bshadow0 pbs">
                             <span class="ca-gov-icon-cloud-sync">
@@ -2367,6 +2562,21 @@ Version 5.0.10
                             <span class="mls"> ca-gov-icon-warning-triangle</span>
                         </div>
                         <p class="icon-value">e063</p>
+                    </div>
+                    <div class="glyph fs1">
+                        <div class="clearfix bshadow0 pbs">
+                            <span class="ca-gov-icon-warning-circle"></span>
+                            <span class="mls"> ca-gov-icon-warning-circle</span>
+                        </div>
+                        <p class="icon-value">e967</p>
+                    </div>
+
+                    <div class="glyph fs1">
+                        <div class="clearfix bshadow0 pbs">
+                            <span class="ca-gov-icon-warning-square"></span>
+                            <span class="mls"> ca-gov-icon-warning-square</span>
+                        </div>
+                        <p class="icon-value">e968</p>
                     </div>
                     <div class="glyph fs1">
                         <div class="clearfix bshadow0 pbs">
