Fixed focus outline in mobile. Added two more icons

--- a/sample/icon-fonts.html
+++ b/sample/icon-fonts.html
@@ -301,6 +301,24 @@ Version 5.0.10
                     </div>
                     <div class="glyph fs1">
                         <div class="clearfix bshadow0 pbs">
+                            <span class="ca-gov-icon-earthquake">
+
+                            </span>
+                            <span class="mls"> ca-gov-icon-earthquake</span>
+                        </div>
+                        <p class="icon-value">e959</p>
+                    </div>
+                    <div class="glyph fs1">
+                        <div class="clearfix bshadow0 pbs">
+                            <span class="ca-gov-icon-quake-hazard">
+
+                            </span>
+                            <span class="mls"> ca-gov-icon-quake-hazard</span>
+                        </div>
+                        <p class="icon-value">e95b</p>
+                    </div>
+                    <div class="glyph fs1">
+                        <div class="clearfix bshadow0 pbs">
                             <span class="ca-gov-icon-quake-house">
 
                             </span>
@@ -353,6 +371,13 @@ Version 5.0.10
                     </div>
                     <div class="glyph fs1">
                         <div class="clearfix bshadow0 pbs">
+                            <span class="ca-gov-icon-sea-level-rise-alt"></span>
+                            <span class="mls"> ca-gov-icon-sea-level-rise-alt</span>
+                        </div>
+                        <p class="icon-value">e96e</p>
+                    </div>
+                    <div class="glyph fs1">
+                        <div class="clearfix bshadow0 pbs">
                             <span class="ca-gov-icon-severe-weather"></span>
                             <span class="mls"> ca-gov-icon-severe-weather</span>
                         </div>
@@ -385,6 +410,13 @@ Version 5.0.10
                             <span class="mls"> ca-gov-icon-tsunami</span>
                         </div>
                         <p class="icon-value">e965</p>
+                    </div>
+                    <div class="glyph fs1">
+                        <div class="clearfix bshadow0 pbs">
+                            <span class="ca-gov-icon-tsunami-alt"></span>
+                            <span class="mls"> ca-gov-icon-tsunami-alt</span>
+                        </div>
+                        <p class="icon-value">e96f</p>
                     </div>
                     <div class="glyph fs1">
                         <div class="clearfix bshadow0 pbs">
