--- a/sample/alert-banner.html
+++ b/sample/alert-banner.html
@@ -25,7 +25,7 @@ Based on Twitter Bootstrap
 
 <body>
 
-<header role="banner" id="header" class="global-header">
+<header role="banner" id="header" class="global-header fixed">
 	<div id="skip-to-content"><a href="#main-content">Skip to Main Content</a></div>
     <!-- Alert Banner -->
     <!--#include virtual="/ssi/alert-banner.html" -->
