- Fixed hamburger menu button color contrast accessibility issue - Added search box top property calculation on the scroll when search box is open

--- a/sample/alert-banner.html
+++ b/sample/alert-banner.html
@@ -26,7 +26,7 @@
 
 <body>
 
-    <header role="banner" id="header" class="global-header">
+    <header role="banner" id="header" class="global-header fixed">
         <div id="skip-to-content"><a href="#main-content">Skip to Main Content</a></div>
         <!-- Alert Banner -->
         <!--#include virtual="/ssi/alert-banner.html" -->
