- Added full width navigation with active search sample page

--- a/sample/index.html
+++ b/sample/index.html
@@ -81,8 +81,8 @@
                 <li><a href="navigation-megamenu.html">State Template v5 Megamenu</a></li>
                 <li><a href="navigation-megamenu-original.html">State Template v4 Megamenu</a></li>
                 <li><a href="navigation-single.html">Single Level Navigation</a></li>
+                <li><a href="navigation-full-width-utility.html">Full Width Navigation with Active Search</a></li>
                 <li><a href="navigation-full-width-icons.html">Full Width Navigation with Icons</a></li>
-                <li><a href="navigation-full-width.html">Full Width Navigation without Icons</a></li>
                 <li><a href="navigation-dropdown.html">Dropdown Navigation</a></li>
                 <li><a href="navigation-active.html">Setting the Active Navigation Item</a></li>
                 <li><a href="navigation-mobile-controls.html">Mobile Navigation Icon Links</a></li>
