--- a/sample/navigation-megamenu-flex.html
+++ b/sample/navigation-megamenu-flex.html
@@ -125,8 +125,8 @@
 
                 <h2>More Navigation Samples</h2>
                 <ul>
+                    <li><a href="navigation-full-width-utility.html">Full Width Navigation with Active Search</a></li>
                     <li><a href="navigation-full-width-icons.html">Full Width Navigation with Icons</a></li>
-                    <li><a href="navigation-full-width.html">Full Width Navigation without Icons</a></li>
                     <li><a href="navigation-single.html">Single Level Navigation</a></li>
                     <li><a href="navigation-megamenu.html">State Template v5 Megamenu</a></li>
                     <li><a href="navigation-megamenu-original.html">State Template v4 Megamenu</a></li>
