--- a/sample/navigation-standard-mobile.html
+++ b/sample/navigation-standard-mobile.html
@@ -73,9 +73,8 @@ Based on Twitter Bootstrap
             
             <h2>More Navigation Samples</h2>
             <ul>
-
+                <li><a href="navigation-full-width-utility.html">Full Width Navigation with Active Search</a></li>
                 <li><a href="navigation-full-width-icons.html">Full Width Navigation with Icons</a></li>
-                <li><a href="navigation-full-width.html">Full Width Navigation without Icons</a></li>
                 <li><a href="navigation-single.html">Single Level Navigation</a></li>
                 <li><a href="navigation-megamenu-flex.html">State Template v5.5 Flex Megamenu</a></li>
                 <li><a href="navigation-megamenu.html">State Template v5 Megamenu</a></li>
