--- a/Instructions.html
+++ b/Instructions.html
@@ -49,7 +49,7 @@
 
 <div id="main-content" class="main-content">
     <div class="wrapper">
-        <main role="main" class="main-primary">
+        <main class="main-primary">
             <ol class="breadcrumb">
                 <li><a href="index.html" title="Home page">Home</a></li>
                 <li><a href="/sample/index.html" title="Examples landing page">Examples</a></li>
