--- a/sample/slideshow-header-banner.html
+++ b/sample/slideshow-header-banner.html
@@ -67,7 +67,7 @@ Based on Twitter Bootstrap
 
 <div id="main-content" class="main-content">
     <div class="section">
-        <main role="main" class="main-primary">
+        <main class="main-primary">
             <ol class="breadcrumb">
                 <li><a href="../index.html" title="Home page">Home</a></li>
                 <li><a href="index.html" title="Examples landing page">Examples</a></li>
