--- a/structure.html
+++ b/structure.html
@@ -62,7 +62,7 @@ Version 5.0.11
     <div id="main-content" class="main-content">
         <div class="container p-b-lg">
             <!-- InstanceBeginEditable name="MainContent" -->
-            <main role="main" class="main-primary">
+            <main class="main-primary">
                 <ol class="breadcrumb">
                     <li><a href="/index.html" title="Home page">Home</a></li>
                     <li><a href="/sample/index.html" title="Examples landing page">Examples</a></li>
