- Added 34 new icons to the CAWeb font library. - Fixed roles accessibility warnings in carousel’s control buttons, in navigation and in page regions.

--- a/sample/course-list.html
+++ b/sample/course-list.html
@@ -99,7 +99,7 @@ Based on Twitter Bootstrap
             </div>
             
         </main>
-        <div class="main-secondary">
+        <div class="main-secondary" role="complementary">
             <!--#include virtual="/sample/modules/profile-banners.html" -->
             <!--#include virtual="/sample/modules/cards-sidebar.html" -->
         </div>
