--- a/sample/location-widgets.html
+++ b/sample/location-widgets.html
@@ -145,7 +145,7 @@
                 </div>
             </main>
 
-            <div class="main-secondary">
+            <div class="main-secondary" role="complementary">
                 <!--#include virtual="/sample/modules/location.html" -->
 
                 <div class="card card-overstated">
