--- a/sample/navigation-dropdown.html
+++ b/sample/navigation-dropdown.html
@@ -84,7 +84,7 @@ Based on Twitter Bootstrap
 </ul>
         </main>
         
-        <div class="main-secondary">
+        <div class="main-secondary" role="complementary">
             <!--#include virtual="/sample/modules/profile-banners.html" -->
         </div>
     </div>
