--- a/sample/navigation-megamenu-accessible.html
+++ b/sample/navigation-megamenu-accessible.html
@@ -507,7 +507,7 @@ Version 5.0.7
 
             </main>
 
-            <div class="main-secondary">
+            <div class="main-secondary" role="complementary">
             </div>
         </div>
     </div>
