--- a/cdn.html
+++ b/cdn.html
@@ -138,6 +138,40 @@
                                 <h3>State Template v5.5</h3>
 
                                 <ul id="accordion" class="accordion-list list-overstated" role="tablist" multiselectable="true">
+                                    <li id="panel_v5_5_8" class="tab" aria-selected="false" aria-controls="panel_5_5_8" aria-expanded="false" role="tab" tabindex="0">
+                                        <a>Version 5.5.8</a>
+                                    </li>
+                                    <div id="panel_5_5_8" class="panel" aria-labelledby="panel_v5_5_8" aria-hidden="true" role="tabpanel">
+                                        <p>CSS</p>
+<pre>
+<code class="overflow-auto">https://california.azureedge.net/cdt/statetemplate/5.5.8/css/cagov.core.css
+https://california.azureedge.net/cdt/statetemplate/5.5.8/css/cagov.core.min.css
+https://california.azureedge.net/cdt/statetemplate/5.5.8/css/cagov.font-only.css
+https://california.azureedge.net/cdt/statetemplate/5.5.8/css/cagov.font-only.min.css
+https://california.azureedge.net/cdt/statetemplate/5.5.8/css/colorscheme-eureka.css
+https://california.azureedge.net/cdt/statetemplate/5.5.8/css/colorscheme-eureka.min.css
+https://california.azureedge.net/cdt/statetemplate/5.5.8/css/colorscheme-mono.css
+https://california.azureedge.net/cdt/statetemplate/5.5.8/css/colorscheme-mono.min.css
+https://california.azureedge.net/cdt/statetemplate/5.5.8/css/colorscheme-oceanside.css
+https://california.azureedge.net/cdt/statetemplate/5.5.8/css/colorscheme-oceanside.min.css
+https://california.azureedge.net/cdt/statetemplate/5.5.8/css/colorscheme-orangecounty.css
+https://california.azureedge.net/cdt/statetemplate/5.5.8/css/colorscheme-orangecounty.min.css
+https://california.azureedge.net/cdt/statetemplate/5.5.8/css/colorscheme-pasorobles.css
+https://california.azureedge.net/cdt/statetemplate/5.5.8/css/colorscheme-pasorobles.min.css
+https://california.azureedge.net/cdt/statetemplate/5.5.8/css/colorscheme-sacramento.css
+https://california.azureedge.net/cdt/statetemplate/5.5.8/css/colorscheme-sacramento.min.css
+https://california.azureedge.net/cdt/statetemplate/5.5.8/css/colorscheme-santabarbara.css
+https://california.azureedge.net/cdt/statetemplate/5.5.8/css/colorscheme-santabarbara.min.css
+https://california.azureedge.net/cdt/statetemplate/5.5.8/css/colorscheme-sierra.css
+https://california.azureedge.net/cdt/statetemplate/5.5.8/css/colorscheme-sierra.min.css
+https://california.azureedge.net/cdt/statetemplate/5.5.8/css/colorscheme-trinity.css
+https://california.azureedge.net/cdt/statetemplate/5.5.8/css/colorscheme-trinity.min.css
+    </code></pre>
+                                        <p>JS</p>
+<pre><code class="overflow-auto">https://california.azureedge.net/cdt/statetemplate/5.5.8/js/cagov.core.js
+https://california.azureedge.net/cdt/statetemplate/5.5.8/js/cagov.core.min.js
+</code></pre>
+                                    </div>
                                     <li id="panel_v5_5_7" class="tab" aria-selected="false" aria-controls="panel_5_5_7" aria-expanded="false" role="tab" tabindex="0">
                                         <a>Version 5.5.7</a>
                                     </li>
@@ -415,6 +449,40 @@ https://california.azureedge.net/cdt/statetemplate/5.5.0/js/cagov.core.min.js
 
 
                                     <h3>State Template v5</h3>
+                                    <li id="tab_v5_0_11" class="tab" aria-selected="false" aria-controls="tab_5_0_11" aria-expanded="false" role="tab" tabindex="0">
+                                        <a>Version 5.0.11</a>
+                                    </li>
+                                    <div id="tab_5_0_11" class="panel" aria-labelledby="tab_v5_0_11" aria-hidden="true" role="tabpanel">
+                                        <p>CSS</p>
+<pre>
+<code class="overflow-auto">https://california.azureedge.net/cdt/statetemplate/5.0.11/css/cagov.core.css
+https://california.azureedge.net/cdt/statetemplate/5.0.11/css/cagov.core.min.css
+https://california.azureedge.net/cdt/statetemplate/5.0.11/css/cagov.font-only.css
+https://california.azureedge.net/cdt/statetemplate/5.0.11/css/cagov.font-only.min.css
+https://california.azureedge.net/cdt/statetemplate/5.0.11/css/colorscheme-eureka.css
+https://california.azureedge.net/cdt/statetemplate/5.0.11/css/colorscheme-eureka.min.css
+https://california.azureedge.net/cdt/statetemplate/5.0.11/css/colorscheme-mono.css
+https://california.azureedge.net/cdt/statetemplate/5.0.11/css/colorscheme-mono.min.css
+https://california.azureedge.net/cdt/statetemplate/5.0.11/css/colorscheme-oceanside.css
+https://california.azureedge.net/cdt/statetemplate/5.0.11/css/colorscheme-oceanside.min.css
+https://california.azureedge.net/cdt/statetemplate/5.0.11/css/colorscheme-orangecounty.css
+https://california.azureedge.net/cdt/statetemplate/5.0.11/css/colorscheme-orangecounty.min.css
+https://california.azureedge.net/cdt/statetemplate/5.0.11/css/colorscheme-pasorobles.css
+https://california.azureedge.net/cdt/statetemplate/5.0.11/css/colorscheme-pasorobles.min.css
+https://california.azureedge.net/cdt/statetemplate/5.0.11/css/colorscheme-sacramento.css
+https://california.azureedge.net/cdt/statetemplate/5.0.11/css/colorscheme-sacramento.min.css
+https://california.azureedge.net/cdt/statetemplate/5.0.11/css/colorscheme-santabarbara.css
+https://california.azureedge.net/cdt/statetemplate/5.0.11/css/colorscheme-santabarbara.min.css
+https://california.azureedge.net/cdt/statetemplate/5.0.11/css/colorscheme-sierra.css
+https://california.azureedge.net/cdt/statetemplate/5.0.11/css/colorscheme-sierra.min.css
+https://california.azureedge.net/cdt/statetemplate/5.0.11/css/colorscheme-trinity.css
+https://california.azureedge.net/cdt/statetemplate/5.0.11/css/colorscheme-trinity.min.css
+</code></pre>
+                                        <p>JS</p>
+<pre><code class="overflow-auto">https://california.azureedge.net/cdt/statetemplate/5.0.11/js/cagov.core.js
+https://california.azureedge.net/cdt/statetemplate/5.0.11/js/cagov.core.min.js
+</code></pre>
+                                    </div>
                                     <li id="tab_v5_0_10" class="tab" aria-selected="false" aria-controls="tab_5_0_10" aria-expanded="false" role="tab" tabindex="0">
                                         <a>Version 5.0.10</a>
                                     </li>
