--- a/sample/carousels.html
+++ b/sample/carousels.html
@@ -64,7 +64,7 @@
                     <div class="two-thirds">
                         <h2>Content Carousel</h2>
                         <p>A content carousel component provides a solution for placing text or other content bove an image. With responsive and dynamic content in mind , there is two element configurations for setting the height of the slide. One which fits to the content, and one which fits to the image.</p>
-                        <p>Our recommendation is use the <strong>content fit</strong> when you have a large amount of text, descriptive content, etc. <i>Note: </i> that in this case your background image should be a generic pattern or design.</p>
+                        <p>Our recommendation is use the <strong>content fit</strong> when you have a large amount of text, descriptive content, etc. <em>Note: </em> that in this case your background image should be a generic pattern or design.</p>
                         <p>On the other hand you should use the <strong>image fit</strong> when you have only a single line or so of text, a simple header or button, html5 video or any content which would take up less space than your image or video.</p>
                         <p>For any content carousel item, you can also apply the class of <code>backdrop</code> which will apply a slight opaque grey background to the content. This is useful when your images do not have enough contrast with your text.</p>
                     </div>
@@ -104,7 +104,7 @@
                 <div class="group">
                     <div class="two-thirds">
                         <h2>Content Carousel (image fit)</h2>
-                        <p>To create an image fit, we use an image element contained within our item. If the image element is missing the item will simply fallback to being a content fit item. <i>Warn:</i> if the image url is broken or pointing to the wrong location, the element will have 0 height.</p>
+                        <p>To create an image fit, we use an image element contained within our item. If the image element is missing the item will simply fallback to being a content fit item. <em>Warning:</em> if the image url is broken or pointing to the wrong location, the element will have 0 height.</p>
 <pre><code><div class="item">
 <img src="/sample/images/gallery/sierra-big.jpg" alt="background" />
     <div class="content-container">
@@ -174,7 +174,7 @@
                 <textarea id="sample-7" class="form-control" rows="10" cols="80"><!--#include virtual="/sample/modules/carousel-link.html" --></textarea>
             </main>
 
-            <div class="main-secondary">
+            <div class="main-secondary" role="complementary">
                 <h1>Social Media Slider</h1>
                 <p>The Social Media Slider displays one item at a time. It will slide a set of items contained in a container with class <code>.carousel-slider</code>.</p>
                 <h2>Social Media Slider Example</h2>
