--- a/sample/event-list.html
+++ b/sample/event-list.html
@@ -143,7 +143,7 @@ Based on Twitter Bootstrap
             </div>
             
         </main>
-        <div class="main-secondary">
+        <div class="main-secondary" role="complementary">
         	<h2>Sidebar Example:</h2>
             <div class="card card-standout highlight">
                 <div class="card-heading">
