--- a/sample/index.html
+++ b/sample/index.html
@@ -181,7 +181,7 @@
 
         </main>
 
-      <div class="main-secondary">
+      <div class="main-secondary" role="complementary">
         <!--#include virtual="/sample/modules/profile-banners.html" -->
         <!--#include virtual="/sample/modules/cards-sidebar.html" -->
       </div>
