--- a/sample/navigation-full-width-icons.html
+++ b/sample/navigation-full-width-icons.html
@@ -106,7 +106,7 @@ Based on Twitter Bootstrap
 
         </main>
         
-        <div class="main-secondary">
+        <div class="main-secondary" role="complementary">
             <!--#include virtual="/sample/modules/profile-banners.html" -->
         </div>
     </div>
