--- a/sample/navigation-mobile-controls.html
+++ b/sample/navigation-mobile-controls.html
@@ -87,7 +87,7 @@
                 </div>
             </main>
 
-            <div class="main-secondary">
+            <div class="main-secondary" role="complementary">
                 <!--#include virtual="/sample/modules/profile-banners.html" -->
             </div>
         </div>
