--- a/sample/panels.html
+++ b/sample/panels.html
@@ -83,7 +83,7 @@ Based on Twitter Bootstrap
                 </div>
         </main>
         
-        <div class="main-secondary">
+        <div class="main-secondary" role="complementary">
             <h2>Example:</h2>
                 <!--#include virtual="/sample/modules/panels-sidebar.html" -->
             <h2><label for="sample-panels-sidebar">Source Code:</label></h2>
