--- a/ssi/navigation.html
+++ b/ssi/navigation.html
@@ -159,7 +159,7 @@ Options are: megadropdown dropdown singlelevel
         </li>
 
         <li class="nav-item" id='nav-item-search'>
-            <a href="javascript:;" class="first-level-link"><span class="ca-gov-icon-search" aria-hidden="true"></span>Search</a>
+            <a href="" class="first-level-link"><span class="ca-gov-icon-search" aria-hidden="true"></span>Search</a>
         </li>
     </ul>
 </nav>
