--- a/sample/icon-fonts.html
+++ b/sample/icon-fonts.html
@@ -237,7 +237,7 @@ Based on Twitter Bootstrap
 
                 <h1>Icon Font Library</h1>
 
-                <p>The CaGov icon font includes 356 icons you can use in your site. Four different formats of the font are included for compatibility with all popular browsers. You may need to add a mime map to your webserver for the WOFF font. To determine if your webserver needs it, upload the /fonts/CaGov.woff file to your webserver. Try downloading the WOFF in your browser by visiting: http://yourwebsite.ca.gov/fonts/CaGov.woff . If it prompts you to download the font, your server is configured correctly. If you get a 404 or other error, you'll need to add a mime map for extension ".woff", and the mimetype is "application/font-woff". Ask your server admin if you need assistance.</p>
+                <p>The CaGov icon font includes 361 icons you can use in your site. Four different formats of the font are included for compatibility with all popular browsers. You may need to add a mime map to your webserver for the WOFF font. To determine if your webserver needs it, upload the /fonts/CaGov.woff file to your webserver. Try downloading the WOFF in your browser by visiting: http://yourwebsite.ca.gov/fonts/CaGov.woff . If it prompts you to download the font, your server is configured correctly. If you get a 404 or other error, you'll need to add a mime map for extension ".woff", and the mimetype is "application/font-woff". Ask your server admin if you need assistance.</p>
 
                 <!-- START ICOMOON DEMO -->
                 <div class="clearfix mhl ptl">
@@ -389,6 +389,26 @@ Based on Twitter Bootstrap
 
 
 
+
+                    <div class="glyph fs1">
+                        <div class="clearfix bshadow0 pbs">
+                            <span class="ca-gov-icon-features">
+
+                            </span>
+                            <span class="mls"> ca-gov-icon-features</span>
+                        </div>
+                        <p class="icon-value">e993</p>
+                    </div>
+
+                    <div class="glyph fs1">
+                        <div class="clearfix bshadow0 pbs">
+                            <span class="ca-gov-icon-accessibility">
+
+                            </span>
+                            <span class="mls"> ca-gov-icon-accessibility</span>
+                        </div>
+                        <p class="icon-value">e992</p>
+                    </div>
 
 
                     <div class="glyph fs1">
@@ -3542,7 +3562,15 @@ Based on Twitter Bootstrap
                         </div>
                         <p class="icon-value">e972</p>
                     </div>
+                    <div class="glyph fs1">
+                        <div class="clearfix bshadow0 pbs">
+                            <span class="ca-gov-icon-update">
 
+                            </span>
+                            <span class="mls"> ca-gov-icon-update</span>
+                        </div>
+                        <p class="icon-value">e994</p>
+                    </div>
 
 
                 </div>
