Updated jquery-migrate.js to version 3.1.0

--- a/ssi/head-css-js.html
+++ b/ssi/head-css-js.html
@@ -47,11 +47,11 @@ Select a color scheme:
     }
 </script>
 <!-- Load jQuery migrate from CDN with fallback to local copy -->
-<script src="https://code.jquery.com/jquery-migrate-3.0.1.min.js"></script>
+<script src="https://code.jquery.com/jquery-migrate-3.1.0.min.js"></script>
 <script>
     //Fall back to local copy if no jQuery migrate found
     if (typeof jQuery.migrateWarnings == 'undefined') { // or typeof jQuery.fn.live == 'undefined'
-        document.write(unescape("%3Cscript src='/js/libs/jquery-migrate-3.0.1.js' type='text/javascript'%3E%3C/script%3E"));
+        document.write(unescape("%3Cscript src='/js/libs/jquery-migrate.min.js' type='text/javascript'%3E%3C/script%3E"));
     }
 
 </script>
