- Added side menu - Fixed some keyboard navigation bugs

--- a/sample/index.html
+++ b/sample/index.html
@@ -84,6 +84,7 @@
                 <li><a href="navigation-full-width-utility.html">Full Width Navigation with Active Search</a></li>
                 <li><a href="navigation-full-width-icons.html">Full Width Navigation with Icons</a></li>
                 <li><a href="navigation-dropdown.html">Dropdown Navigation</a></li>
+                <li><a href="navigation-sidebar.html">Side Navigation</a></li>
                 <li><a href="navigation-active.html">Setting the Active Navigation Item</a></li>
                 <li><a href="navigation-mobile-controls.html">Mobile Navigation Icon Links</a></li>
 
