--- a/sample/modules/nav-singlelevel.html
+++ b/sample/modules/nav-singlelevel.html
@@ -1,5 +1,5 @@
 <!-- Top Level Navigation Only -->
-<nav id="navigation" class="main-navigation singlelevelnav auto-highlight">
+<nav id="navigation" class="main-navigation singlelevel auto-highlight">
     <ul id="nav_list" class="top-level-nav">
         	<li class="nav-item">
             	<a href="/sample/" class="first-level-link"><span class="ca-gov-icon-gears"></span>Examples</a>
