Updated utility header links styles

--- a/sample/tabs.html
+++ b/sample/tabs.html
@@ -95,9 +95,9 @@ Based on Twitter Bootstrap
 
             <div class="group">
                 <div class="half">
-                    <h2>Boostrap Tabs</h2>
+                    <h2>Bootsrap Tabs</h2>
                     <p> <p>
-                        Bootstrap tabs use <code>.nav-tabs</code> class and require the <code>.nav</code> base class. Tabs also uses HTML5 roles for accessibility.
+                        Bootstrap tabs component uses <code>.nav-tabs</code> class and requires the <code>.nav</code> base class. Tabs also uses HTML5 roles for accessibility.
                         Add <code>role="tablist"</code> to the ul that contains the tab links,
                         and add <code>role="tab"</code> to the anchor tag that is the tab link.
                         The tab link also requires an HTML5 <code>data-toggle="tab"</code> attribute
