Updated parallax js

--- a/ssi/section-service-icons.html
+++ b/ssi/section-service-icons.html
@@ -1,5 +1,5 @@
 <div class="section section-primary">
-    <div class="parallax-bg" style="background-image: url(&quot;images/background-primary.jpg&quot;); height: 607.1px; transform: translate(0px, 707.545px);"></div>
+    <div class="parallax-bg" style="background-image: url(&quot;images/background-primary.jpg&quot;)"></div>
     <div class="container">
         <!--#include virtual="/sample/modules/icon-links.html" -->
     </div>
