Added scticky footer sample page

--- a/sample/index.html
+++ b/sample/index.html
@@ -157,6 +157,7 @@
                 <li><a href="service-group.html">Service Tiles</a></li>
                 <li><a href="socialsharer.html">SocialSharer</a></li>
                 <li><a href="spacing.html">Spacing</a></li>
+                <li><a href="sticky-footer.html">Sticky Footer</a></li>
                 <li><a href="tabs.html">Tabs</a></li>
                 <li><a href="tables.html">Tables</a></li>
                 <li><a href="testimonials.html">Testimonials</a></li>
