Updated accordion keyboard accessibility, fixed parallax-bg class

--- a/ssi/section-open-data.html
+++ b/ssi/section-open-data.html
@@ -1,4 +1,5 @@
 <div class="section section-primary">
+    <div class="parallax-bg" style="background-image: url('/images/background.jpg')"></div>
     <div class="container p-b-lg">
         <div class="row">
             <div class="col-md-10 offset-md-1">
