Added parallax module sample page.

--- a/ssi/section-open-data.html
+++ b/ssi/section-open-data.html
@@ -1,5 +1,5 @@
 <div class="section section-understated">
-    <div class="parallax-bg" style="background-image:url(/images/bg-open-data.jpg); top:500px"></div>
+    <div class="parallax-bg" style="background-image:url(/images/bg-open-data.jpg);"></div>
     
     <div class="container p-b-lg">
         <div class="row">
