--- a/sample/index.html
+++ b/sample/index.html
@@ -151,6 +151,7 @@
                 <li><a href="media-object.html">Media Object</a></li>
                 <li><a href="number-counter.html">Number Counter</a></li>
                 <li><a href="panes.html">Panes</a></li>
+                <li><a href="parallax.html">Parallax</a></li>
                 <li><a href="progress-bars.html">Progress Bars</a></li>
                 <li><a href="progress-blocks.html">Progress Blocks</a></li>
                 <li><a href="sections.html">Sections</a></li>
