--- a/sample/index.html
+++ b/sample/index.html
@@ -122,6 +122,7 @@
                                     <li><a href="number-counter.html">Number Counter</a></li>
                                     <li><a href="panels.html">Panels</a></li>
                                     <li><a href="panes.html">Panes</a></li>
+                                    <li><a href="parallax.html">Parallax <span class="label label-info">new</span></a></li>
                                     <li><a href="progress-bars.html">Progress Bars</a></li>
                                     <li><a href="progress-blocks.html">Progress Blocks</a></li>
                                     <li><a href="sections.html">Sections</a></li>
