Updated parallax.html file

--- a/sample/parallax.html
+++ b/sample/parallax.html
@@ -77,10 +77,10 @@ var defaultActiveLink = "Components";
                     <p class="text-center">height can be specified by adding height class, such as <code>.height-300</code></p>
                 </div>
             </div>
-            <div class="parallax-bg height-300 section-primary" id="parallax-3" data-image-src="/images/main-banner4.jpg">
+            <div class="parallax-bg height-300 color-white" id="parallax-3" data-image-src="/images/main-banner4.jpg">
                 <div class="container p-y-lg">
                     <h2 class="text-center">Light Text Color</h2>
-                    <p class="text-center">Make light text on dark backgrounds by adding class .section-primary</p>
+                    <p class="text-center">Make light text on dark backgrounds by adding class .color-white</p>
                 </div>
             </div>
 
@@ -105,7 +105,7 @@ var defaultActiveLink = "Components";
 <div class="parallax-bg height-300 section-primary" id="parallax-3" data-image-src="/images/main-banner4.jpg">
     <div class="container p-y-lg">
         <h2 class="text-center">Light Text Color</h2>
-        <p class="text-center">Make light text on dark backgrounds by adding class .section-primary</p>
+        <p class="text-center">Make light text on dark backgrounds by adding class .color-white</p>
     </div>
 </div></textarea>
 
