Fixed two column layout on some pages

--- a/sample/location-widgets.html
+++ b/sample/location-widgets.html
@@ -54,7 +54,7 @@ var defaultActiveLink = "Components";
     </header>
 
     <div id="main-content" class="main-content">
-        <div class="container p-b-lg">
+        <div class="section p-b-lg">
             <main class="main-primary">
                 <ol class="breadcrumb">
                     <li><a href="../index.html" title="Home page">Home</a></li>
