--- a/sample/page-templates.html
+++ b/sample/page-templates.html
@@ -57,7 +57,7 @@
     <div id="main-content" class="main-content">
         <!-- Include Page Template -->
         <!--#include virtual="/ssi/header-primary-banner.html" -->
-        <div class="container p-b-lg">
+        <div class="section p-b-lg">
             <main class="main-primary">            
                 <ol class="breadcrumb">
                     <li><a href="../index.html" title="Home page">Home</a></li>
