--- a/sample/event-list.html
+++ b/sample/event-list.html
@@ -55,7 +55,7 @@ Based on Twitter Bootstrap
 </header>
 
 <div id="main-content" class="main-content">
-    <div class="container p-b-lg">
+    <div class="section p-b-lg">
         <main class="main-primary">            
             <ol class="breadcrumb">
                 <li><a href="../index.html" title="Home page">Home</a></li>
