Updated parallax background implementation in some pages

--- a/business-profile.html
+++ b/business-profile.html
@@ -144,9 +144,8 @@
             <!-- End Section -->
 
 
-            <div class="section section-primary">
-                <div class="parallax-bg" style="background-image: url(&quot;images/main-banner9.jpg&quot;); height: 607.1px; transform: translate(0px, 207.545px);"></div>
-                <div class="container">
+            <div class="parallax-bg height-250 color-white" id="parallax-1" data-image-src="/images/background-primary.jpg">
+                <div class="container p-t-md">
                     <!--#include virtual="/sample/modules/icon-links.html" -->
 
                 </div>
