--- a/sample/modules/section-parallax.html
+++ b/sample/modules/section-parallax.html
@@ -1,5 +1,4 @@
-<div class="section section-standout">
-    <div class="parallax-bg" style="background-image:url(images/background.jpg)"></div>
+<div class="parallax-bg" id="parallax-1" data-image-src="/images/background.jpg">
     <div class="container">
         <!-- columns and or content here -->
     </div>
