--- a/ssi/section-open-data.html
+++ b/ssi/section-open-data.html
@@ -1,11 +1,12 @@
-<div class="section section-understated">
-    <div class="parallax-bg" style="background-image:url(images/bg-open-data.jpg)"></div>
-    <div class="container p-b-lg">
-        <div class="row">
-            <div class="col-md-10 offset-md-1">
-                <h2 class="text-center">California Open Data</h2>
-                <p class="text-center">Maecenas sed diam eget risus varius blandit sit amet non magna. Aenean lacinia bibendum nulla sed consectetur. Nullam quis risus eget urna mollis ornare vel eu leo. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Sed posuere consectetur est at lobortis.</p>
-                <div class="text-center"><a href="" class="btn btn-primary">Get Started</a></div>
+<div class="section">
+    <div class="parallax-bg height-300" id="parallax-1" data-image-src="images/bg-open-data.jpg">
+        <div class="container p-b-lg">
+            <div class="row">
+                <div class="col-md-10 offset-md-1">
+                    <h2 class="text-center">California Open Data</h2>
+                    <p class="text-center">Maecenas sed diam eget risus varius blandit sit amet non magna. Aenean lacinia bibendum nulla sed consectetur. Nullam quis risus eget urna mollis ornare vel eu leo. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Sed posuere consectetur est at lobortis.</p>
+                    <div class="text-center"><a href="" class="btn btn-primary">Get Started</a></div>
+                </div>
             </div>
         </div>
     </div>
