--- a/ssi/section-service-icons.html
+++ b/ssi/section-service-icons.html
@@ -1,6 +1,5 @@
-<div class="section section-primary">
-    <div class="parallax-bg" style="background-image: url(&quot;images/background-primary.jpg&quot;); height: 607.1px; transform: translate(0px, 707.545px);"></div>
-    <div class="container">
-        <!--#include virtual="/sample/modules/icon-links.html" -->
-    </div>
+<div class="parallax-bg height-250 color-white" id="parallax-1" data-image-src="/images/background-primary.jpg">
+    <div class="container p-t-md">
+            <!--#include virtual="/sample/modules/icon-links.html" -->
+        </div>
 </div>
