--- a/sample/typography.html
+++ b/sample/typography.html
@@ -138,10 +138,10 @@ var defaultActiveLink = "Components";
                     </div>
                     <div class="half">
                         <span class="monospace font-size-70x">
-                            font-family: 'Source Sans Pro'<br />
-                            font-weight: 400<br />
+                            font-family: 'Asap Condensed'<br />
+                            font-weight: 500<br />
                             font-size: 38px<br />
-                            line-height: 1.1
+                            line-height: 1.2
                         </span>
                     </div>
                 </div>
@@ -152,8 +152,8 @@ var defaultActiveLink = "Components";
                     </div>
                     <div class="half">
                         <span class="monospace font-size-70x">
-                            font-family: 'Source Sans Pro'<br />
-                            font-weight: 400<br />
+                            font-family: 'Asap Condensed'<br />
+                            font-weight: 500<br />
                             font-size: 31px<br />
                             line-height: 1.1
                         </span>
@@ -166,10 +166,10 @@ var defaultActiveLink = "Components";
                     </div>
                     <div class="half">
                         <span class="monospace font-size-70x">
-                            font-family: 'Source Sans Pro'<br />
-                            font-weight: 400<br />
+                            font-family: 'Asap Condensed'<br />
+                            font-weight: 500<br />
                             font-size: 25px<br />
-                            line-height: 1.1
+                            line-height: 1.2
                         </span>
                     </div>
                 </div>
@@ -180,10 +180,10 @@ var defaultActiveLink = "Components";
                     </div>
                     <div class="half">
                         <span class="monospace font-size-70x">
-                            font-family: 'Source Sans Pro'<br />
-                            font-weight: 400<br />
+                            font-family: 'Asap Condensed'<br />
+                            font-weight: 500<br />
                             font-size: 20px<br />
-                            line-height: 1.1
+                            line-height: 1.2
                         </span>
                     </div>
                 </div>
@@ -194,10 +194,10 @@ var defaultActiveLink = "Components";
                     </div>
                     <div class="half">
                         <span class="monospace font-size-70x">
-                            font-family: 'Source Sans Pro'<br />
-                            font-weight: 400<br />
+                            font-family: 'Asap Condensed'<br />
+                            font-weight: 500<br />
                             font-size: 16px<br />
-                            line-height: 1.1
+                            line-height: 1.2
                         </span>
                     </div>
                 </div>
@@ -208,10 +208,10 @@ var defaultActiveLink = "Components";
                     </div>
                     <div class="half">
                         <span class="monospace font-size-70x">
-                            font-family: 'Source Sans Pro'<br />
-                            font-weight: 400<br />
+                            font-family: 'Asap Condensed'<br />
+                            font-weight: 500<br />
                             font-size: 14px<br />
-                            line-height: 1.1
+                            line-height: 1.2
                         </span>
                     </div>
                 </div>
@@ -219,11 +219,11 @@ var defaultActiveLink = "Components";
                 <h2>Applying Web Font Into a Website</h2>
                 <p>To apply web font into a webpage following code needs to be copied into the &lt;head&gt; section of the HTML document:</p>
 
-                <pre><code class="language-html" data-lang="html"><span class="text-accent-p2">&lt;link</span> <span class="text-info">href=</span><span class="text-accent7">'https://fonts.googleapis.com/css?family=Asap+Condensed:400,600|Source+Sans+Pro:400,700'</span> <span class="text-info">rel=</span><span class="text-accent7">'stylesheet'</span> <span class="text-info">type=</span><span class="text-accent7">'text/css'</span><span class="text-accent-p2">&gt;</span>
-</code></pre>
+                <pre><span class="text-accent-p2">&lt;link</span> <span class="text-info">href=</span><span class="text-accent7">'https://fonts.googleapis.com/css?family=Asap+Condensed:400,600|Source+Sans+Pro:400,700'</span> <span class="text-info">rel=</span><span class="text-accent7">'stylesheet'</span> <span class="text-info">type=</span><span class="text-accent7">'text/css'</span><span class="text-accent-p2">&gt;</span>
+</pre>
                 <p class="m-t-lg">Also, use the following CSS rules to specify web font familiy:</p>
 
-                <pre><code class="language-html" data-lang="html"><span class="text-accent-p2">font-family:</span><span class="text-info">'Source Sans Pro', sans-serif;</span><br /><span class="text-accent-p2">font-family:</span><span class="text-info">'Asap Condensed', sans-serif;</span></code></pre>
+                <pre><span class="text-accent-p2">font-family:</span><span class="text-info">'Source Sans Pro', sans-serif;</span><br /><span class="text-accent-p2">font-family:</span><span class="text-info">'Asap Condensed', sans-serif;</span></pre>
            
                 <br /><br />
 
