Updated GovOps secretary name

--- a/ssi/section-footer2.html
+++ b/ssi/section-footer2.html
@@ -35,9 +35,9 @@
                     </div>
                     <div class="media-body">
                         <!-- Figure Info -->
-                        <h4 class="m-0">Julie Lee</h4>
+                        <h4 class="m-0">Yolanda Richardson</h4>
                         <div class="d-block">
-                            <span class="font-size-13">Acting Secretary, Gov. Operations Agency</span>
+                            <span class="font-size-13">Secretary, Government Operations Agency</span>
 
                         </div>
                         <div class="m-t-sm m-b-0 brd-bottom brd-standout-light brd-dotted-1 w-100"></div>
