Updated section footer include columns

--- a/ssi/section-footer2.html
+++ b/ssi/section-footer2.html
@@ -1,7 +1,7 @@
 <div class="section section-impact p-b-lg">
     <div class="container">
-        <div class="row group">
-            <div class="quarter p-t-md">
+        <div class="row">
+            <div class="col-lg-4 p-t-md">
                 <figure class="bg-standout-gradient p-a border-0">
                     <div class="media">
                         <div class="d-flex m-r-md">
@@ -50,7 +50,7 @@
 
             </div>
 
-            <div class="quarter">
+            <div class="col-lg-3">
                 <h4>State Wide Campaigns</h4>
                 <ul class="list-standout">
                     <li><a href="http://registertovote.ca.gov/" class="text-white">Register to vote</a></li>
@@ -61,7 +61,7 @@
             
             </div>
 
-            <div class="quarter">
+            <div class="col-lg-2">
                 <h4>Support</h4>
                 <ul class="list-unstyled">
                     <li><a href="" class="btn btn-default btn-xs"><span class="ca-gov-icon-caret-line-right"></span>Email <span class="sr-only">Us</span></a></li>
@@ -72,7 +72,7 @@
                 <a href="#" class="btn btn-primary">Get Support</a>
             </div>
 
-            <div class="quarter">
+            <div class="col-lg-3">
                 <h4>Awards</h4>
                 <ul class="list-unstyled">
                     <li><a href="" class="btn btn-default btn-xs"><span class="ca-gov-icon-check-line"></span>Best of the Web</a></li>
